    in HTML or other formats, including figures and output created by this
    script.  It comes with its counterpart grabcode, which lets one literally
    grab the HTML published code from a remote website, for example.

 ** Other new functions added in 4.2:

      audioformats
      deg2rad
      dialog
      evalc
      gsvd
      hash
      im2double
      localfunctions
      material
      normest1
      ode45
      odeget
      odeset
      padecoef
      psi
      rad2deg
      reducepatch
      reducevolume
      uibuttongroup

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.2 and will
    be removed from Octave 4.6 (or whatever version is the second major
    release after 4.2):

      Function             | Replacement
      ---------------------|------------------
      bitmax               | flintmax
      mahalanobis          | mahal in Octave-Forge statistics pkg
      md5sum               | hash
      octve_config_info    | __octave_config_info__
      onenormest           | normest1
      sleep                | pause
      usleep               | pause
      wavread              | audioread
      wavwrite             | audiowrite

 ** The following functions were deprecated in Octave 3.8 and have been
    removed from Octave 4.2.

      default_save_options    java_new
      gen_doc_cache           java_unsigned_conversion
      interp1q                javafields
      isequalwithequalnans    javamethods
      java_convert_matrix     re_read_readline_init_file
      java_debug              read_readline_init_file
      java_invoke             saving_history

 ** The global error_state variable in Octave's C++ API has been
    deprecated and will be removed in a future version.  Now the error
    and print_usage functions throw an exception
    (octave_execution_exception) after displaying the error message.
    This makes the error and print_usage functions in C++ work more like